force-app/main/default/objects/Bill__c/fields/TRM_Bill_Category__c.field-meta.xml
<CustomField>
    <fullName>TRM_Bill_Category__c</fullName>
    <description>Automatically calculated during adjudication. Prescription if majority of line items are NDC codes, otherwise Medical.</description>
    <label>Bill Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Prescription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>