force-app/main/default/objects/Bill__c/fields/TRM_EOB_Total_3rd_Party_Resp__c.field-meta.xml
<CustomField>
    <fullName>TRM_EOB_Total_3rd_Party_Resp__c</fullName>
    <description>Total 3rd party responsibility calculated at the moment of locking the Bill during adjudication. Sum of X3rd_Party_Curr__c from all Bill Line Items. Saved as a snapshot when approving adjudication.</description>
    <label>EOB Total 3rd Party Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>