force-app/main/default/objects/Bill__c/fields/TRM_EOB_Total_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>TRM_EOB_Total_Adjustments__c</fullName>
    <description>Total adjustments calculated at the moment of locking the Bill during adjudication. Calculated as Total Charges - Total Paid. Saved as a snapshot when approving adjudication.</description>
    <label>EOB Total Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>