force-app/main/default/objects/Bill__c/fields/TRM_EOB_Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>TRM_EOB_Total_Charges__c</fullName>
    <description>Total charges calculated at the moment of locking the Bill during adjudication. Sum of Charge__c from all Bill Line Items. Saved as a snapshot when approving adjudication.</description>
    <label>EOB Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>