force-app/main/default/objects/Bill__c/fields/TRM_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>TRM_Processed_Date__c</fullName>
    <description>Date when the Bill was marked as Processed during the adjudication process</description>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>